# cells2table

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
cells2table/: __init__.py  cli.py  docling.py
cells2table/datamodels/: bbox.py  table.py
cells2table/models/PaddlePaddle/: cell_detection.py  table_classification.py
cells2table/models/runtimes/: onnx.py
cells2table/models/tasks/: base.py  classification.py  detection.py
cells2table/pipelines/: __init__.py  base.py  classification_detection.py  paddlepaddle.py
cells2table/utils/: download.py  eval.py  visualize.py
cells2table/utils/eval/: cells2table_provider.py  external.py  main.py  rd_scorer.py  teds_scorer.py  tlag_scorer.py
eval/: DoclingDPBench_TableFormer.json  DoclingDPBench_cells2table.json  FinTabNet_TableFormer.json  FinTabNet_cells2table.json  OmniDocBench_TableFormer.json  OmniDocBench_cells2table.json  PubTabNet_TableFormer.json  PubTabNet_cells2table.json  PulseBench-Tab_cells2table.json  PulseBench-Tab_pp.json  README.md  generate_charts.ipynb  generate_external_stats.ipynb  generate_stats.ipynb  visualizations.ipynb
src/: cli.py
src/cells2table/: cli.py  docling.py
src/cells2table/datamodels/: __init__.py
src/cells2table/models/PaddlePaddle/: __init__.py  cell_detection.py  pipeline.py  table_classification.py
src/cells2table/models/tasks/: base.py  classification.py
src/cells2table/models/utils/: download.py
src/cells2table/models/utils/runtimes/: onnx.py
src/cells2table/models/utils/tasks/: base.py  classification.py  detection.py
src/cells2table/pipelines/: __init__.py  base.py
src/cells2table/utils/: table.py  visualize.py
tests/: test.ipynb  test_docling_plugin.py
