[project]
name = "cells2table"
version = "0.4.0"
description = "Table image parsing with cell detection models"
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "jspast", email = "140563347+jspast@users.noreply.github.com" }
]
keywords = ["docling", "plugin"]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "numpy (>=2.2.0,<3.0.0)",
  "onnxruntime (>=1.23.2,<2.0.0)",
  "opencv-python (>=4.11.0.86,<5.0.0.0)",
]

[project.urls]
Homepage = "https://github.com/jspast/cells2table"
Issues = "https://github.com/jspast/cells2table/issues"

[project.scripts]
cells2table = "cells2table.cli:main"
cells2table-download = "cells2table.cli:download"
cells2table-eval = "cells2table.utils.eval.main:main"

[project.entry-points.docling]
cells2table = "cells2table.docling"

[project.optional-dependencies]
docling = [
  "docling (>=2.66.0,<3.0.0)",
  "torch (>=2.11.0,<3.0.0)",
  "torchvision (>=0.26.0,<1.0.0)",
]
eval = [
  "docling-eval (>=1.0.1,<2.0.0)",
  "docling-metrics-table>=0.12.0",
  "ipykernel (>=7.2.0,<8.0.0)",
  "ipympl>=0.10.0",
  "lxml>=5.4.0",
  "matplotlib (>=3.10.8,<4.0.0)",
  "paddleocr[doc-parser]>=3.5.0",
  "pillow (>=12.2.0,<13.0.0)",
  "pyspark (>=4.1.1,<5.0.0)",
  "python-levenshtein>=0.27.3",
  "scipy>=1.17.1",
  "torch (>=2.11.0,<3.0.0)",
  "torchvision (>=0.26.0,<1.0.0)",
]
huggingface = [
  "huggingface-hub (>=0.36.0,<2.0.0)",
]

[dependency-groups]
dev = [
  "cells2table",
  "pytest (>=7.0,<10.0)",
  "ruff (>=0.5.0,<1.0.0)",
]

[build-system]
requires = ["uv_build>=0.9.17,<1.0.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.uv]
package = true
prerelease = "if-necessary-or-explicit"

[tool.uv.build-backend]
module-name = "cells2table"
module-root = ""

[tool.uv.sources]
torch = { index = "torch_cpu" }
torchvision = { index = "torch_cpu" }
docling-eval = { git = "https://github.com/jspast/docling-eval", branch = "main" }

[[tool.uv.index]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
